# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AppointmentController;
+use App\Http\Controllers\AuthController;
 use App\Http\Controllers\ClientController;
 use App\Http\Controllers\ProviderController;
 use App\Http\Controllers\ProviderServiceController;
@@ -8,13 +9,24 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\ServiceController;
 
+// Authentication routes
+Route::post('/register', [AuthController::class, 'register']);
+Route::post('/login', [AuthController::class, 'login']);
+Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
+
 Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
 
-Route::apiResource('clients', ClientController::class);
-Route::apiResource('services', ServiceController::class);
-Route::apiResource('providers', ProviderController::class);
-Route::apiResource('appointments', AppointmentController::class);
+Route::middleware('auth:sanctum')->group(function () {
+    Route::apiResource('clients', ClientController::class);
+    Route::apiResource('services', ServiceController::class);
+    Route::apiResource('providers', ProviderController::class);
+    Route::apiResource('appointments', AppointmentController::class);
 
-Route::post('providers/{providerId}/services', [ProviderServiceController::class, 'attachService']);
+    Route::post('providers/{providerId}/services', [ProviderServiceController::class, 'attachService']);
+
+    Route::get('/client/profile', [ClientController::class, 'profile']);
+    Route::get('/provider/profile', [ProviderController::class, 'profile']);
+});
+
